fix mobx warning and seo

--- a/client/server.template.ejs
+++ b/client/server.template.ejs
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
+    <%%- meta %>
+    <%%- title %>
+    <%%- link %>
+    <%%- style %>
   </head>
   <body>
     <div id="root"><%%- appString %></div>
